force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/Adder__c.field-meta.xml
<CustomField>
    <fullName>Adder__c</fullName>
    <label>Adder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>