force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/Adder_Type__c.field-meta.xml
<CustomField>
    <fullName>Adder_Type__c</fullName>
    <label>Adder_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>