force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/Allocation__c.field-meta.xml
<CustomField>
    <fullName>Allocation__c</fullName>
    <label>Allocation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>