force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Name__c</fullName>
    <label>Broker_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>