force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Type__c</fullName>
    <label>Calculation_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>