force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/Commission_Usage__c.field-meta.xml
<CustomField>
    <fullName>Commission_Usage__c</fullName>
    <label>Commission_Usage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>