force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/Contract_Book_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Book_Date__c</fullName>
    <label>Contract_Book_Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>