force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <label>Contract_Start_Date</label>
    <type>Date</type>
</CustomField>