force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/Contract_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Months__c</fullName>
    <label>Contract_Term_Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>