force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/DE_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>DE_Account_Number__c</fullName>
    <label>DE_Account_Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>