force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/LDC_Contracted_Usage__c.field-meta.xml
<CustomField>
    <fullName>LDC_Contracted_Usage__c</fullName>
    <label>LDC_Contracted_Usage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>