force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/LDC_End_Date__c.field-meta.xml
<CustomField>
    <fullName>LDC_End_Date__c</fullName>
    <label>LDC_End_Date</label>
    <type>Date</type>
</CustomField>