force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/LDCCustNameFormula__c.field-meta.xml
<CustomField>
    <fullName>LDCCustNameFormula__c</fullName>
    <formula>Customer_Name__c + &apos; - &apos; +  LDC_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LDCCustNameFormula</label>
    <type>Text</type>
</CustomField>