force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/MatchedAccountName__c.field-meta.xml
<CustomField>
    <fullName>MatchedAccountName__c</fullName>
    <label>MatchedAccountName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>