force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/MatchedContract__c.field-meta.xml
<CustomField>
    <fullName>MatchedContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MatchedContract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>CSV INVOICE DATA TEMP (MatchedContract)</relationshipLabel>
    <relationshipName>CSV_INVOICE_DATA_TEMP1</relationshipName>
    <type>Lookup</type>
</CustomField>