force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/Matching_Contract__c.field-meta.xml
<CustomField>
    <fullName>Matching_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matching Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>CSV INVOICE DATA</relationshipLabel>
    <relationshipName>CSV_INVOICE_DATA_TEMP</relationshipName>
    <type>Lookup</type>
</CustomField>