force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/MatchWithContractSubs__c.field-meta.xml
<CustomField>
    <fullName>MatchWithContractSubs__c</fullName>
    <formula>IF(Commodity__c = &quot;Gas&quot;,&quot;Gas&quot;,IF(Commodity__c = &quot;Power&quot;,&quot;Electricity&quot;,&quot; &quot;))&amp; &quot;-&quot;&amp;
text(Contract_Term_Months__c) &amp; &quot;-&quot;&amp;
TEXT(DAY(Contract_Start_Date__c))+ &quot;-&quot; +TEXT(MONTH(Contract_Start_Date__c))+ &quot;-&quot; +TEXT(YEAR(Contract_Start_Date__c))
&amp; &quot;-&quot;&amp;
TEXT(DAY(Contract_End_Date__c))+ &quot;-&quot; +TEXT(MONTH(Contract_End_Date__c))+ &quot;-&quot; +TEXT(YEAR(Contract_End_Date__c))
&amp; &quot;-&quot; &amp;
MatchedAccountName__c
&amp; &quot;-&quot; &amp;
LDC_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MatchWithContractSubs</label>
    <type>Text</type>
</CustomField>