force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/Payment_Month__c.field-meta.xml
<CustomField>
    <fullName>Payment_Month__c</fullName>
    <label>Payment_Month</label>
    <type>Date</type>
</CustomField>