force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <label>Promo_Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>