force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/Service_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Service_State_Province__c</fullName>
    <label>Service_State_Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>