force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>CSV INVOICE DATA</relationshipLabel>
    <relationshipName>CSV_INVOICE_DATA</relationshipName>
    <type>Lookup</type>
</CustomField>