force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/SIteName__c.field-meta.xml
<CustomField>
    <fullName>SIteName__c</fullName>
    <formula>&apos;s-&apos;+ LDC_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIteName</label>
    <type>Text</type>
</CustomField>