force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <label>Tax_Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>