force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/Total_Vol__c.field-meta.xml
<CustomField>
    <fullName>Total_Vol__c</fullName>
    <formula>VALUE(LDC_Contracted_Usage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Vol</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>