force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/Trigger_Deal__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger_Deal</label>
    <type>Checkbox</type>
</CustomField>