force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <label>Utility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>