force-app/main/default/objects/CSV_INVOICE_DATA_TEMP__c/fields/Verification_Number__c.field-meta.xml
<CustomField>
    <fullName>Verification_Number__c</fullName>
    <label>Verification_Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>